<resources>
    <string name="app_name">COI&amp;I</string>
    <string name="title_activity_menu__principal">Menu_Principal</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


    <string name="action_entradas">ENTRADAS</string>
    <string name="action_salidas">SALIDAS</string>
    <string name="action_inventarios">INVENTARIOS</string>
    <string name="action_salida_ruta">SALIDA/RUTAS</string>
    <string name="action_ruta_detalle">RUTA DETALLE</string>
    <string name="action_devoluciones">DEVOLUCIONES</string>
    <string name="action_sincronizar_catalogo">SINCRONIZAR CATÁLOGOS</string>
    <string name="action_sincronizar_configuracion">CONFIGURACIÓN</string>
    <string name="title_activity_inputs">ENTRADAS</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="title_activity_outputs">SALIDAS</string>
    <string name="title_activity_inventory">INVENTARIO</string>
    <string name="title_activity_reprint">REIMPRESIÓN</string>

    <string name="textView_user">USER</string>
    <string name="textView_password">PASSWORD</string>
    <string name="textView_login">LOGIN</string>
    <string name="textView_lis_datos">Lista de Productos</string>
    <string name="title_activity_route">RUTAS</string>
    <string name="title_activity_configuracion">CONFIGURACIÓN</string>
    <string name="title_activity_returns">DEVOLUCIONES</string>
    <string name="title_activity_inventory_initial">INVENTARIO INICIAL</string>
    <string name="title_activity_route_detail">RUTA A DETALLE</string>
    <string name="title_activity_read_route_detail">LECTURA RUTA A DETALLE</string>
    <string name="title_activity_connections">CONEXIONES</string>

    <string name="button_guardar">ENVIAR</string>
    <string name="button_almacenar">AGREGAR</string>
    <string name="button_cambiar">CAMBIAR</string>
    <string name="button_consultar">CONSULTAR</string>
    <string name="text_elementos_capturados">ELEMENTOS CAPTURADOS</string>

    <string name="text_servidor_ws">Servidor WS</string>

    <string name="contentDescriptionImages">ImagesDesign</string>

    <!--STRINGS ENTRADAS-->

    <string name="inputs_pedido">N° DE PEDIDO</string>
    <string name="inputs_tarima">TARIMA</string>
    <string name="inputs_sku">SKU</string>
    <string name="inputs_descripcion">DESCRIPCIÓN</string>
    <string name="inputs_frescura">FECHA DE FRESCURA</string>
    <string name="inputs_buffer">BUFFER</string>
    <string-array name="inputs_spinner_buffer">
        <item>Gorrión</item>
        <item>Paucar</item>
        <item>Colibri</item>
        <item>Paloma</item>
        <item>Garza</item>
    </string-array>

    <!--STRINGS SALIDAS-->

    <string name="outputs_tarima">TARIMA</string>
    <string name="outputs_sku">SKU</string>
    <string name="outputs_descripcion">DESCRIPCIÓN</string>
    <string name="outputs_frescura">FECHA DE FRESCURA</string>

    <!--STRINGS INVENTORY-->

    <string name="inventory_sku_cod_scan">SKU-CÓDIGO DE BARRAS</string>
    <string name="inventory_descripcion">DESCRIPCIÓN</string>
    <string name="inventory_ubicacion">UBICACIÓN</string>
    <string name="inventory_unidad_medida">UNIDAD DE MEDIDA</string>
    <string-array name="inventary_spinner_ubicacion">
        <item>Lote</item>
        <item>Buffer</item>
        <item>Picking</item>
        <item>Merma</item>
        <item>Cedi</item>
        <item>Puerta</item>
    </string-array>
    <string-array name="inventary_spinner_unidad_medida">
        <item>Caja</item>
        <item>Tarima</item>
        <item>Pieza</item>
    </string-array>
    <string name="inventory_cantidad">CANTIDAD</string>

    <!--STRINGS RUTAS-->

    <string name="route_ruta">RUTA</string>
    <string name="route_unidad_medida">UNIDAD DE MEDIDA</string>
    <string name="route_sku">PRODUCTO SKU</string>
    <string name="route_cantidad">CANTIDAD</string>

    <!--STRINGS RETURNS-->

    <string name="returns_ruta">RUTA</string>
    <string name="returns_seccion">SECCIÓN</string>
    <string name="returns_unidad_medida">UNIDAD DE MEDIDA</string>
    <string name="returns_prod_sku">PRODUCTO SKU</string>
    <string name="returns_descripcion">DESCRIPCIÓN</string>
    <string name="returns_cantidad">CANTIDAD</string>

    <!--STRINGS INVENTORY INITIAL-->

    <string name="inventory_initial_lote">LOTE </string>
    <string name="inventory_initial_cod">CÓDIGO DE BARRAS</string>
    <string name="inventory_initial_descripcion">DESCRIPCIÓN</string>
    <string name="inventory_initial_ubicacion">UBICACIÓN</string>
    <string name="inventory_initial_unidad_medida">UNIDAD DE MEDIDA</string>
    <string name="inventory_initial_cantidad">CANTIDAD</string>

    <!--STRINGS REIMPRESION-->

    <string name="reprint_sku_cod">SKU-CÓDIGO DE BARRAS</string>
    <string name="reprint_descripcion">DESCRIPCIÓN</string>
    <string name="reprint_frescura">FECHA DE FRESCURA</string>
    <string name="reprint_consecutivo_i">CONSECUTIVO INICIAL</string>
    <string name="reprint_consecutivo_f">CONSECUTIVO FINAL</string>

    <string name="hint_edit_text">0000000000</string>
    <string name="seleccione_un_elemento">SELECCIONA UN ELEMENTO</string>
    <string name="seleccione_una_ruta">RUTAS</string>
    <string name="seleccione_una_familia">FAMILIAS</string>


    <!--STRINGS READ ROUTE DETAILS-->

    <string name="rrd_sku">SKU</string>
    <string name="rrd_um">UNIDAD DE MEDIDA</string>
    <string name="rrd_desc">DESCRIPCIÓN</string>
    <string name="rrd_total">TOTAL</string>
    <string name="rrd_pendiente">PENDIENTE</string>
    <string name="rrd_cantidad">CANTIDAD</string>


</resources>
