<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Route"
    tools:showIn="@layout/activity_route">

    <LinearLayout
        android:id="@+id/linear_papa_inputs"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/formulario_rutas"
            android:layout_width="325dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center|top"
            android:layout_marginTop="10dp"
            android:background="#fff"
            android:elevation="20dp"
            android:orientation="vertical"
            android:padding="5dp">

            <View
                android:layout_width="fill_parent"
                android:layout_height="8dp"
                android:layout_marginTop="5dp"
                android:background="#CCDEC2"></View>

            <LinearLayout
                android:id="@+id/linear_ruta_route"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView_ruta_route"
                    android:layout_width="175dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/text_margin"
                    android:text="@string/route_ruta"
                    android:textSize="30sp"
                    app:fontFamily="@font/bebasneue_regular" />

                <Spinner
                    android:id="@+id/spinner_ruta_route"
                    android:layout_width="120dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"

                    android:spinnerMode="dialog" />

            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="8dp"
                android:layout_marginTop="5dp"
                android:background="#CCDEC2"></View>

            <LinearLayout
                android:id="@+id/linear_unidad_medida_route"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView_unidad_medida_route"
                    android:layout_width="175dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/text_margin"
                    android:text="@string/route_unidad_medida"
                    android:textSize="30sp"
                    app:fontFamily="@font/bebasneue_regular" />

                <Spinner
                    android:id="@+id/spinner_unidad_medida_route"
                    android:layout_width="120dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:spinnerMode="dialog" />

            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="8dp"
                android:layout_marginTop="5dp"
                android:background="#CCDEC2"></View>

            <LinearLayout
                android:id="@+id/linear_sku_route"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView_sku_route"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/text_margin"
                    android:text="@string/route_sku"
                    android:textSize="30sp"
                    app:fontFamily="@font/bebasneue_regular" />

                <ImageView
                    android:id="@+id/imageView5"
                    android:layout_width="0dp"
                    android:layout_height="45dp"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:contentDescription="@string/contentDescriptionImages"
                    app:srcCompat="@drawable/icon_edit" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear_editText_one_route"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/edittext_route_sku"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:hint="@string/hint_edit_text"
                    android:inputType="number"
                    app:fontFamily="@font/bebasneue_regular" />

            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="8dp"
                android:layout_marginTop="25dp"
                android:background="#CCDEC2"></View>

            <LinearLayout
                android:id="@+id/linear_descripcion_route"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView_descripcion_route"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/text_margin"
                    android:text="@string/inventory_descripcion"
                    android:textSize="30sp"
                    app:fontFamily="@font/bebasneue_regular" />

                <ImageView
                    android:id="@+id/imageView18"
                    android:layout_width="0dp"
                    android:layout_height="45dp"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:contentDescription="@string/contentDescriptionImages"
                    app:srcCompat="@drawable/icon_edit" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear_editText_four_route"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/edittext_descripcion_route"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:hint="@string/hint_edit_text"
                    android:inputType="text"
                    android:enabled="false"
                    app:fontFamily="@font/bebasneue_regular" />

            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="8dp"
                android:layout_marginTop="25dp"
                android:background="#CCDEC2"></View>

            <LinearLayout
                android:id="@+id/linear_cantidad_route"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView_cantidad_route"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/text_margin"
                    android:text="@string/route_cantidad"
                    android:textSize="30sp"
                    app:fontFamily="@font/bebasneue_regular" />

                <ImageView
                    android:id="@+id/imageView8"
                    android:layout_width="0dp"
                    android:layout_height="45dp"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:contentDescription="@string/contentDescriptionImages"
                    app:srcCompat="@drawable/icon_edit" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear_editText_four_cantidad"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/edittext_descripcion_cantidad"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:hint="@string/hint_edit_text"
                    android:inputType="number"
                    app:fontFamily="@font/bebasneue_regular" />

            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="8dp"
                android:layout_marginTop="25dp"
                android:background="#CCDEC2"></View>

            <Button
                android:id="@+id/btn_guardar_route"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginTop="8dp"
                android:background="@color/colorAccent"
                android:fontFamily="@font/bebasneue_regular"
                android:gravity="center"
                android:text="@string/button_almacenar"
                android:textColor="#FFFFFF"
                android:textSize="30sp" />

        </LinearLayout>

        <Button
            android:id="@+id/btn_consultar_route"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="8dp"
            android:background="@color/colorPrimaryDark"
            android:fontFamily="@font/bebasneue_regular"
            android:gravity="center"
            android:text="@string/button_consultar"
            android:textColor="#FFFFFF"
            android:textSize="30sp" />

        <Button
            android:id="@+id/btn_enviar_route"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="8dp"
            android:background="#0B8E36"
            android:fontFamily="@font/bebasneue_regular"
            android:gravity="center"
            android:text="@string/button_guardar"
            android:textColor="#FFFFFF"
            android:textSize="30sp" />

    </LinearLayout>


</android.support.v4.widget.NestedScrollView>